--- a/sacms/templates/sacms/data_en.html
+++ b/sacms/templates/sacms/data_en.html
@@ -92,7 +92,7 @@
                 <a class="blog-nav-item" href="{% url 'index_en'%}">homepage</a>
                 <a class="blog-nav-item" href="{% url 'newsfeed_en' %}">news</a>
                 <a class="blog-nav-item" href="{% url 'meetings_en' %}">academic</a>
-                <a class="blog-nav-item" href="#">notices</a>
+                <a class="blog-nav-item" href="{% url 'notices_en' %}">notices</a>
                 <a class="blog-nav-item active" href="{% url 'data_en' %}">data analysis</a>
                 <a class="blog-nav-item" href="{% url 'groups_en'%}">teams</a>
               </nav>
