--- a/sacms/templates/sacms/groups.html
+++ b/sacms/templates/sacms/groups.html
@@ -96,7 +96,7 @@
                 <a class="blog-nav-item" href="{% url 'index'%}">首页</a>
                 <a class="blog-nav-item" href="{% url 'newsfeed' %}">新闻动态</a>
                 <a class="blog-nav-item" href="{% url 'meetings' %}">学术交流</a>
-                <a class="blog-nav-item" href="#">通知公告</a>
+                <a class="blog-nav-item" href="{% url 'notices' %}">通知公告</a>
                 <a class="blog-nav-item" href="{% url 'data' %}">数据分析</a>
                 <a class="blog-nav-item active" href="{% url 'groups' %}">研究团队</a>
               </nav>
