--- a/sacms/templates/sacms/notice_en.html
+++ b/sacms/templates/sacms/notice_en.html
@@ -1,42 +1,48 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
+   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>学术交流</title>
-    <link rel='icon' href=" {% static 'sacms/logo.jpg' %}" type='image/x-ico' />
-    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-    <script src="{% static 'sacms/js/jquery-2.2.3.min.js' %}"></script>
+    <title>{{ notice.title }}</title>
+    <link rel='icon' href='pics/logo.jpg' type='image/x-ico' />
+
     <!-- 新 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">
     <!-- 可选的Bootstrap主题文件（一般不用引入） -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'sacms/bootstrap-theme.min.css' %}">
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <link href="{% static 'sacms/index.css' %}" rel="stylesheet">
 
-    <LINK href="{% static 'sacms/news_style.css' %}" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">
+    <script src="{% static 'sacms/js/jquery-2.2.3.min.js' %}"></script>
+    <script src="{% static 'sacms/js/bootstrap.min.js' %}"></script>
+    <link href="{% static 'sacms/index.css' %}" rel="stylesheet">
+
+
   </head>
 
   <body>
-    <a  href="/logout" style="float:right;padding:10px;font-size:20px;" id="logout">切换账户</a>
-    <a  href="/signup" style="float:right;padding:10px;font-size:20px">注册</a>
-    <a  href="/login" style="float:right;padding:10px;font-size:20px">登录</a>
-    <a  href="{% url 'meetings_en' %}" style="float:right;padding:10px;font-size:20px">English</a>
+    <a  href="/logout" style="float:right;padding:10px;font-size:20px;" id="logout">change Account</a>
+    <a  href="/signup" style="float:right;padding:10px;font-size:20px">registe</a>
+    <a  href="/login" style="float:right;padding:10px;font-size:20px">login</a>
+    <a  href="{% url 'notice' notice.id %}" style="float:right;padding:10px;font-size:20px">中文</a>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
 
 
-        <div class="col-md-2 logo">
+      	<div class="col-md-2 logo">
           <img src="{% static 'sacms/logo.jpg' %}" height="130">
         </div>
         <div class="col-md-10">
-          <p class="chn-title"><b>国家重点研发计划——重要热带病传播相关的入侵媒介及其病原体的生物学特性研究</b></p>
+        	<p class="chn-title"><b>国家重点研发计划——重要热带病传播相关的入侵媒介及其病原体的生物学特性研究</b></p>
           <div class="row">
             <div class="col-md-9 eng-title">
               <p><b>National Research and Development Plan: Research on Biological Characteristics of the Tropical Disease Related Invasion vectors and Pathogens</b><p>
@@ -44,7 +50,7 @@
             <div class="col-md-3 search-box">
               <div id="custom-search-input">
                 <div class="input-group col-md-12">
-                  <input type="text" class="  search-query form-control" placeholder="搜索" />
+                  <input type="text" class="  search-query form-control" placeholder="search" />
                   <span class="input-group-btn">
                     <button class="btn btn-danger" type="button">
                       <span class=" glyphicon glyphicon-search"></span>
@@ -57,71 +63,52 @@
           </div>
 
         </div>
-
-
-
-
-          <!-- <div class="col-md-3 search-box">
-            <div class="row">
-              <div class="col-md-offset-1 col-md-11">
-
-                <div id="custom-search-input">
-                  <div class="input-group col-md-12">
-                    <input type="text" class="  search-query form-control" placeholder="搜索" />
-                    <span class="input-group-btn">
-                      <button class="btn btn-danger" type="button">
-                        <span class=" glyphicon glyphicon-search"></span>
-                      </button>
-                    </span>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div> -->
       </div>
 
       <div class="container">
-        <div class="blog-masthead">
-          <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-              <nav class="blog-nav" >
-                <a class="blog-nav-item" href="{% url 'index'%}">首页</a>
-                <a class="blog-nav-item" href="{% url 'newsfeed' %}">新闻动态</a>
-                <a class="blog-nav-item active" href="{% url 'meetings' %}">学术交流</a>
-                <a class="blog-nav-item" href="{% url 'notices' %}">通知公告</a>
-                <a class="blog-nav-item" href="{% url 'data' %}">数据分析</a>
-                <a class="blog-nav-item" href="{% url 'groups'%}">研究团队</a>
-              </nav>
-            </div>
-          </div>
-        </div>
+	      <div class="blog-masthead">
+		      <div class="row">
+		      	<div class="col-md-10 col-md-offset-1">
+			        <nav class="blog-nav" >
+                <a class="blog-nav-item" href="{% url 'index_en' %}">homepage</a>
+                <a class="blog-nav-item" href="{% url 'newsfeed_en' %}">news</a>
+                <a class="blog-nav-item" href="{% url 'meetings_en' %}">academic</a>
+                <a class="blog-nav-item active" href="{% url 'notices_en' %}">notices</a>
+                <a class="blog-nav-item" href="{% url 'data_en' %}">data analysis</a>
+                <a class="blog-nav-item" href="{% url 'groups_en' %}">teams</a>
+			        </nav>
+			    	</div>
+			    </div>
+		    </div>
       </div>
 
     </div>
 
     <div class="container">
-      <div class="clearfix" id="wrapper">
-<!--div class="con_box clearfix" id="breadcrumbs">
-<div class="bcrumbs"><strong><a title="回到首页" href="http://sdcs.sysu.edu.cn/">home</a></strong>           <a>学院动态</a>
-         </div></div-->
-<div id="art_container clearfix">
-<div class="fl" id="art_main">
-<div class="cat_list">
-<ul>
-  {% if meeting_list %}
-    {% for meeting in meeting_list %}
-    <li>
-      <h2><span class="date fr"> {{ meeting.held_date }}</span> <a href="{% url 'meeting' meeting.id %}" title="{{ meeting.title }}">{{ meeting.title }}</a></h2></li>
-    </li>
-    {% endfor %}
-    {% else %}
-    <li> no meeting is available</li>
-  {% endif %}
-</div></div><!--内容-->         </div></div>
+      <div class="row">
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-8 project-introduction">
+        {% if notice %}
+          <p class="project-introduction-title" style="text-align:center">{{ notice.title }}</p>
+             <div class="row">
+               <div class="col-sm-2"></div>
+               <div class="col-sm-4"><small class="author">sponsor：{{ notice.organization }}</small></div>
+               <div class="col-sm-4"><small class="pubDate">data： {{ notice.published_date }}</small></div>
+             </div>
+             <hr>
+          <p class="project-introduction-paragraph">
+          {{ notice.content }}
+          <hr>
+          </p>
+				</div>
 
+        <div class="col-sm-2">
 
-      <hr>
+        </div>
+       {% else %}
+       <p>no notice</p>
+       {% endif %}
       <footer class="footer">
         <div class="row">
           <div class="col-sm-8">
@@ -160,5 +147,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+		<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
