--- a/sacms/templates/sacms/upload.html
+++ b/sacms/templates/sacms/upload.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>数据上传</title>
-    <link rel='icon' href='pics/logo.jpg' type='image/x-ico' />
+    <link rel='icon' href="{% static 'sacms/logo.jpg' %}" type='image/x-ico' />
      <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="{% static 'sacms/bootstrap.min.css' %}">
 	<!-- 可选的Bootstrap主题文件（一般不用引入） -->
